# Money

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.env  docker-compose.yml  local.env  pyproject.toml
money/: manage.py
money/money/: asgi.py  settings.py  urls.py  wsgi.py
money/transaction/: filters.py  models.py  serializers.py  tests.py  views.py
money/transaction/migrations/: 0001_initial.py
money/wallet/: filters.py  models.py  serializers.py  tests.py  views.py
money/wallet/migrations/: 0001_initial.py
